// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` direct a test   can increase number :  info pushed by Server  1`] = `
<div
  className="DirectorEle"
>
  {
  "user": {
    "_id": "u1",
    "email": "u1"
  }
}
</div>
`;

exports[` direct a test   can increase number :  project Edited by client 1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "b19999999999999999999999",
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "projects": Object {
      "b19999999999999999999999": Object {
        "_id": "b19999999999999999999999",
        "isActive": true,
        "name": "pn1",
        "shot": 43,
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "b19999999999999999999999": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {
    "edit.projectModelb19999999999999999999999": Object {
      "_id": "b19999999999999999999999",
      "isActive": true,
      "name": "pn1",
      "shot": 43,
    },
  },
}
`;

exports[` direct a test   can increase number :  project pushed by server  1`] = `
Object {
  "createState": Object {},
  "currentlyEditing": "",
  "fetching": Object {},
  "getFromServer": [Function],
  "getState": Object {
    "projects": Object {
      "b19999999999999999999999": Object {
        "_id": "b19999999999999999999999",
        "isActive": true,
        "name": "pn1",
        "shot": 42,
      },
    },
    "users": Object {
      "u1": Object {
        "_id": "u1",
        "email": "u1",
      },
    },
  },
  "lastFetch": Object {
    "b19999999999999999999999": -2077750800000,
  },
  "removeState": Object {},
  "updateState": Object {},
}
`;

exports[` direct a test   can increase number : After manual edits 1`] = `
<div
  className="DirectorEle"
>
  {
  "state": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 43,
    "isActive": true
  },
  "loading": false,
  "original": {
    "_id": "b19999999999999999999999",
    "name": "pn1",
    "shot": 43,
    "isActive": true
  },
  "user": {
    "_id": "u1",
    "email": "u1"
  }
}
</div>
`;

exports[` direct a test   can increase number : Before manual edits 1`] = `
<div
  className="DirectorEle"
>
  {
  "user": {
    "_id": "u1",
    "email": "u1"
  }
}
</div>
`;
